--- a/src/app/modules/report/juryduty/session/content.component.scss
+++ b/src/app/modules/report/juryduty/session/content.component.scss
@@ -84,6 +84,14 @@
   }
 }
 
+.m-juryDutySessionContent__entityVersion {
+  padding-top: 8px;
+
+  a {
+    cursor: pointer;
+  }
+}
+
 .m-juryDutySessionContent__options .m-btn {
   margin: 16px;
 }
