Replaced dead link

--- a/src/app/common/components/marketing/footer.component.html
+++ b/src/app/common/components/marketing/footer.component.html
@@ -54,8 +54,8 @@
         </li>
 
         <li>
-          <a href="https://irl.minds.com/" target="_blank" i18n>
-            Minds IRL
+          <a href="https://change.minds.com/" target="_blank" i18n>
+            Events
           </a>
         </li>
       </ul>
