push for review site tests

--- a/src/app/modules/wallet/v2/balance-cash/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/balance-cash/balance-cash.component.html
@@ -1,5 +1,8 @@
 <div class="m-walletBalance--cash" *ngIf="!inProgress">
-  <div class="m-walletBalance---cash__onboardingNotice">
+  <div
+    class="m-walletBalance---cash__onboardingNotice"
+    *ngIf="!hasAccount || !account.bankAccount"
+  >
     <p (click)="scrollToSettings()">
       <a>Add your bank information</a>
     </p>
