--- a/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
@@ -8,7 +8,7 @@
     [allowedCountries]="allowedCountries"
     (submitted)="setView()"
   ></m-walletCashOnboarding>
-  <!-- BANK FORM --------------------------- -->
+  <!-- BANK FORM ----------------------- -->
   <m-walletCashBankForm
     *ngIf="view === 'bank'"
     [account]="account"
@@ -22,6 +22,6 @@
     [allowedCountries]="allowedCountries"
     (submitted)="setView()"
   ></m-walletCashOnboardingExtras>
-  <!-- ERROR --------------------------- -->
+  <!-- ERROR ----------------------------- -->
   <p *ngIf="view === 'error'" class="m-walletForm__error">{{ error }}</p>
 </div>
