--- a/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
+++ b/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
@@ -1,50 +1,55 @@
 <div class="m-walletTransactions">
-  <div *ngIf="inProgress || !init" class="m-walletTransactions__spinner">
+  <div *ngIf="!init" class="m-wallet__spinner">
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
-  <div class="m-walletTransactionsTable__wrapper" *ngIf="init">
-    <div class="m-walletTransactionsTable__row--top">
-      <div class="m-walletTransactionsTable__time">
-        Upcoming
+  <ng-container *ngIf="init">
+    <div class="m-walletTransactionsTable__wrapper">
+      <div class="m-walletTransactionsTable__row--top">
+        <div class="m-walletTransactionsTable__time">
+          Upcoming
+        </div>
+        <div
+          class="m-walletTransactionsTable__typeWrapper containsPopover"
+          (mouseenter)="showRewardsPopup = true"
+          (mouseleave)="showRewardsPopup = false"
+        >
+          <i class="material-icons">star_border</i
+          ><span>Today's Daily Rewards</span>
+        </div>
+        <m-walletRewardsPopup
+          [timestamp]="startOfToday"
+          *ngIf="showRewardsPopup"
+        ></m-walletRewardsPopup>
+        <div class="m-walletTransactionsTable__filterWrapper">
+          <span>Transaction Type</span>
+          <m-dropdownSelector
+            *ngIf="transactions"
+            [filter]="filter"
+            [showLabel]="false"
+            (selectionMade)="filterSelected($event)"
+          ></m-dropdownSelector>
+        </div>
       </div>
-      <div
-        class="m-walletTransactionsTable__typeWrapper containsPopover"
-        (mouseenter)="showRewardsPopup = true"
-        (mouseleave)="showRewardsPopup = false"
-      >
-        <i class="material-icons">star_border</i
-        ><span>Today's Daily Rewards</span>
-      </div>
-      <m-walletRewardsPopup
-        [timestamp]="startOfToday"
-        *ngIf="showRewardsPopup"
-      ></m-walletRewardsPopup>
-      <div class="m-walletTransactionsTable__filterWrapper">
-        <span>Transaction Type</span>
-        <m-dropdownSelector
-          *ngIf="transactions"
-          [filter]="filter"
-          [showLabel]="false"
-          (selectionMade)="filterSelected($event)"
-        ></m-dropdownSelector>
-      </div>
+      <ng-container *ngIf="transactions.length >= 1">
+        <m-walletTransactionsTable
+          currency="tokens"
+          [transactions]="transactions"
+          [filterApplied]="filterApplied"
+        >
+        </m-walletTransactionsTable>
+        <infinite-scroll
+          distance="25%"
+          (load)="loadTransactions(false)"
+          [moreData]="moreData"
+          [inProgress]="inProgress"
+        ></infinite-scroll>
+      </ng-container>
     </div>
-    <ng-container *ngIf="!inProgress || transactions">
-      <m-walletTransactionsTable
-        currency="tokens"
-        [transactions]="transactions"
-        [filterApplied]="filterApplied"
-      >
-      </m-walletTransactionsTable>
-      <infinite-scroll
-        distance="25%"
-        (load)="load(false)"
-        [moreData]="moreData"
-        [inProgress]="inProgress"
-      ></infinite-scroll>
-    </ng-container>
-  </div>
-  <div class="m-walletTransactions__noTxNotice" *ngIf="init && !transactions">
-    You don't have any token transactions yet.
-  </div>
+    <div
+      class="m-walletTransactions__noTxNotice"
+      *ngIf="transactions.length === 0"
+    >
+      <p>You don't have any token transactions yet.</p>
+    </div>
+  </ng-container>
 </div>
