--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -21,6 +21,7 @@
         >{{activity.ownerObj.name}}</strong
       >
       <m-channel--badges
+        data-nosnippet
         class="m-channel--badges-activity"
         [user]="activity.ownerObj"
         badges="[ 'admin', 'verified' ]"
