--- a/src/app/modules/media/view/view.component.html
+++ b/src/app/modules/media/view/view.component.html
@@ -272,7 +272,10 @@
             class="mdl-cell mdl-cell--12-col m-media--description"
             *ngIf="entity.description"
             [innerHtml]="entity.description | safe"
-            [hidden]="!descriptionContainer.innerText.trim('')"
+            [hidden]="
+              descriptionContainer.innerText &&
+              !descriptionContainer.innerText.trim('')
+            "
             #descriptionContainer
           ></div>
         </div>
