--- a/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
@@ -2,7 +2,7 @@
   <!-- HAS NOT SET UP BANK ACCOUNT / IS UPDATING BANK ACCOUNT ------------------ -->
   <ng-container *ngIf="!leftMonetization">
     <form [formGroup]="form" *ngIf="!hasBankAccount() || editing">
-      <p>Enter bank account details to receive payments.</p>
+      <p>Finish adding your bank details to start receiving cash payouts.</p>
       <!-- ***INPUT COUNTRY DROPDOWN-->
       <div class="m-walletForm__field--text stretchedField">
         <div class="m-walletSettings__row--label">
