--- a/src/app/modules/wallet/v2/settings-cash/cash-onboarding-extras/cash-onboarding-extras.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-onboarding-extras/cash-onboarding-extras.component.html
@@ -1,4 +1,5 @@
 <div class="m-walletOnboardingExtrasForm" *ngIf="account">
+  <p>Start receiving cash payouts by adding your bank details.</p>
   <!-- **** INPUT: PHOTO ID -->
   <ng-container
     *ngIf="account.requirement.indexOf('individual.verification.document') > -1"
