--- a/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-onboarding/cash-onboarding.component.html
@@ -8,8 +8,8 @@
 
   <div class="m-walletCashOnboardingView--form" *ngIf="editing">
     <form [formGroup]="form">
-      <p>Enter personal details to start setting up your cash account.</p>
-      <!-- ------------------------------------------------------------ -->
+      <p>Start receiving cash payouts by adding your bank details.</p>
+      <!-- ----------------------------------------------- -->
 
       <!-- **** INPUT: COUNTRY DROPDOWN -->
       <div class="m-walletForm__multifieldGroup">
