--- a/src/app/modules/wallet/v2/settings-eth/settings-eth.component.html
+++ b/src/app/modules/wallet/v2/settings-eth/settings-eth.component.html
@@ -1,4 +1,8 @@
-<div class="m-walletSettings" *ngIf="ethWallet">
+<!-- <div *ngIf="!ethWallet" class="m-wallet__spinner">
+  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+</div> -->
+<!-- <div class="m-walletSettings" *ngIf="ethWallet"> -->
+<div class="m-walletSettings">
   <h2>Ether Address</h2>
   <p>
     Your Ether address is the same as your on-chain address.<m-tooltip
