--- a/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
+++ b/src/app/modules/wallet/v2/transactions-tokens/transactions-tokens.component.html
@@ -30,7 +30,7 @@
           ></m-dropdownSelector>
         </div>
       </div>
-      <ng-container *ngIf="transactions.length >= 1">
+      <ng-container *ngIf="transactions.length !== 0">
         <m-walletTransactionsTable
           currency="tokens"
           [transactions]="transactions"
