--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -21,12 +21,19 @@
             (tabChanged)="updateCurrency($event)"
           ></m-shadowboxHeader__tabs>
           <div class="m-shadowboxLayout__body">
-            <div class="m-walletDashboardBalances__wrapper">
+            <div
+              class="m-walletDashboardBalances__wrapper"
+              *ngIf="
+                activeCurrencyId === 'tokens' || activeCurrencyId === 'cash'
+              "
+            >
               <m-walletTokenOnboarding
                 *ngIf="
                   activeCurrencyId === 'tokens' && !tokenOnboardingComplete
                 "
-                (onboardingCompleted)="tokenOnboardingCompleted()"
+                [hasAddress]="hasOnchainAddress"
+                [phoneVerified]="phoneVerified"
+                (onboardingComplete)="tokenOnboardingCompleted()"
                 (scrollToTokenSettings)="scrollToSettings('tokens')"
               ></m-walletTokenOnboarding>
               <m-walletBalance--tokens
@@ -37,6 +44,8 @@
               <m-walletBalance--cash
                 class="m-shadowboxLayout__body"
                 *ngIf="activeCurrencyId === 'cash'"
+                [viewId]="activeViewId"
+                [cashWallet]="wallet.cash"
                 (scrollToCashSettings)="scrollToSettings('cash')"
               ></m-walletBalance--cash>
             </div>
@@ -67,6 +76,7 @@
                     *ngIf="activeCurrencyId === 'tokens'"
                   ></m-walletTransactions--tokens>
                   <m-walletTransactions--cash
+                    [cashWallet]="wallet.cash"
                     *ngIf="activeCurrencyId === 'cash'"
                     [noAccount]="wallet.cash.address === null"
                   ></m-walletTransactions--cash>
@@ -76,18 +86,18 @@
                     <m-walletSettings--tokens
                       class="m-walletDashboardViews__view"
                       *ngIf="activeCurrencyId === 'tokens'"
-                      (onchainAddressChanged)="loadWallet()"
-                      #tokenSettings
+                      (onchainAddressChanged)="onchainAddressChanged()"
                     ></m-walletSettings--tokens>
                     <m-walletSettings--cash
                       class="m-walletDashboardViews__view"
                       *ngIf="activeCurrencyId === 'cash'"
+                      [cashWallet]="wallet.cash"
                       (accountChanged)="loadWallet()"
-                      #cashSettings
                     ></m-walletSettings--cash>
                     <m-walletSettings--eth
                       class="m-walletDashboardViews__view"
                       *ngIf="activeCurrencyId === 'eth'"
+                      [ethWallet]="wallet.eth"
                       (scrollToTokenSettings)="scrollToSettings('tokens')"
                     ></m-walletSettings--eth>
                     <m-walletSettings--btc
