--- a/src/app/modules/wallet/v2/settings-tokens/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/settings-tokens/settings-tokens.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!wallet" class="m-wallet__spinner">
+  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+</div>
 <div class="m-walletSettings" *ngIf="wallet">
   <div class="m-walletSettingsView--setup" *ngIf="!display">
     <h4>
